--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -68,7 +68,7 @@
                         <!-- <Span class="saludo"> ¡Hola!</Span>-->
                         <!-- <Span class="yo-soy"> Mi nombre es</Span>-->
                         <Span class="nombre" translate="no">FRANCIS MENDOZA</Span>
-                        <Span class="profesion" (click)="GetData()" translate="yes">DESARROLLADOR</Span>
+                        <Span class="profesion" translate="yes">DESARROLLADOR</Span>
                     </div>
                 </div>
             </div>
