--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -4,11 +4,17 @@
         background: url(/assets/background-image.png) no-repeat center center fixed;
         background-size: cover;
     }
+    
+    button[disabled=disabled],
+    button:disabled {
+        background-color: #cbcbcb;
+        cursor: not-allowed;
+    }
     /*@import url('https://fonts.googleapis.com/css2?family=Archivo&family=Bebas+Neue&family=Heebo&display=swap');*/
     
     @media screen and (max-width:1920px) {
         .center {
-            background: url(/assets/background-image.png) no-repeat center center fixed;
+            /* background: url(/assets/background-image.png) no-repeat center center fixed; */
             background-size: cover;
             display: flex;
             align-items: center;
@@ -16,6 +22,7 @@
             padding: 120px 10px;
             margin: 0px;
             size: auto auto;
+            background: #f1f1f1;
         }
         .div-contact {
             width: 700px;
@@ -37,19 +44,21 @@
             font-size: 14px;
             border: 0;
             outline: 0;
-            background: transparent;
-            border-bottom: 2px solid rgb(151 151 151);
-            color: white;
+            background: #f9f9f9;
+            /* border-bottom: 2px solid rgb(151 151 151); */
+            color: rgb(46, 46, 46);
+            border-radius: 5px;
         }
         input::placeholder {
-            color: rgb(255, 157, 77);
+            color: rgb(112, 112, 112);
             font-size: 12px;
         }
         input:focus {
             /* outline: none;*/
             border-color: rgb(83, 123, 211);
-            box-shadow: rgb(218, 107, 74);
-            margin: 30px auto 30px auto;
+            box-shadow: 0px 0px 7px 3px rgb(80 162 255 / 32%);
+            /*margin: 30px auto 30px auto;*/
+            /* border: 1px solid rgba(34, 120, 201, 0.582);*/
         }
         button {
             width: 100%;
@@ -72,7 +81,15 @@
             border: none;
             outline: 0;
             background: transparent;
-            border: 1px solid rgb(46, 46, 46);
+            /* border: 1px solid rgb(46 46 46 / 0%);*/
+            background-color: #f9f9f9;
+            resize: none;
+            font-size: 14px;
+            color: rgb(46, 46, 46);
+        }
+        .mensaje::placeholder {
+            color: rgb(112, 112, 112);
+            font-size: 12px;
         }
         .modal {
             background-color: rgba(107, 38, 38, 0.8);
@@ -102,6 +119,10 @@
             box-shadow: 0px 10px 10px rgba(63, 146, 241, 0.13);
             padding: 30px;
         }
+        .mensaje:focus {
+            border-color: rgb(83, 123, 211);
+            box-shadow: 0px 0px 7px 3px rgb(80 162 255 / 32%);
+        }
         .modal-content {
             width: 100%;
             height: 100%;
@@ -116,6 +137,14 @@
             height: 40px !important;
             padding: 10px !important;
             margin: 0px !important;
+        }
+        h2 {
+            font-size: 1.8rem;
+            color: #2f70a9;
+        }
+        #spiner {
+            display: block;
+            color: #77aad7;
         }
     }
     
@@ -175,17 +204,22 @@
             display: block;
             margin: 20px auto 20px auto;
             padding: 10px;
-            font-size: 12px;
+            font-size: 14px;
             border: 0;
             outline: 0;
-            background: transparent;
-            border-bottom: 1px solid rgb(151 151 151);
+            background: #f9f9f9;
+            /* border-bottom: 2px solid rgb(151 151 151); */
+            color: white;
         }
         input:focus {
             outline: none;
             border-color: rgb(83, 123, 211);
             box-shadow: rgb(111, 154, 194);
             margin: 30px auto 30px auto;
+        }
+        input::placeholder {
+            color: rgb(255, 255, 255) !important;
+            font-size: 12px;
         }
         button {
             width: 100%;
