--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -442,7 +442,7 @@
               @keyframes girar {
                   0% {
                       background: url(/assets/lion.jpg);
-                      background-size: 100% 100%;
+                      /* background-size: 100% 100%;*/
                       /* transform: rotate(0deg);*/
                   }
                   50% {
@@ -452,7 +452,7 @@
                   100% {
                       /* transform: rotate(10deg);*/
                       background: url(/assets/lion.jpg);
-                      background-size: 110% 110%;
+                      /* background-size: 110% 110%;*/
                   }
               }
               .foto {
