--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,8 @@
 <footer id="footer">
     <div class="social">
-        <a target="_blank" href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQE2R-ttyzAbqAAAAXz97qVAA0QZecVgWcya4DpsctwnINKc56pT1L5I_8dL34jgPYWHbTI49TzAhkVI4w1TIL6cmkDkkpLDAK-Rh8EsY2MirHRBZ4Ba5_5WJsPYQO6wXng8zto=&originalReferer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fpe.linkedin.com%2Fin%2Ffrancis-mendoza-chavez-64a62120a"><i class="bi bi-linkedin"></i></a>
+        By Francis Mendoza Ch.
+        <!-- <a target="_blank" href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQE2R-ttyzAbqAAAAXz97qVAA0QZecVgWcya4DpsctwnINKc56pT1L5I_8dL34jgPYWHbTI49TzAhkVI4w1TIL6cmkDkkpLDAK-Rh8EsY2MirHRBZ4Ba5_5WJsPYQO6wXng8zto=&originalReferer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fpe.linkedin.com%2Fin%2Ffrancis-mendoza-chavez-64a62120a"><i class="bi bi-linkedin"></i></a>
         <a href=""> <i class="bi bi-facebook"></i></a>
-        <a href=""> <i class="bi bi-whatsapp"></i></a>
+        <a href=""> <i class="bi bi-whatsapp"></i></a>-->
     </div>
 </footer>
