--- a/src/app/components/habilidades/habilidades.component.html
+++ b/src/app/components/habilidades/habilidades.component.html
@@ -19,46 +19,63 @@
         <div class="content-foto-info">
             <div class="info">
                 <div class="info-head">
-                    <i id="icon-halility" class="bi bi-code-slash code menu-icon"></i>
-                    <Span class="title-company" translate="no">Mis habilidades</Span>
+                    <!-- <i id="icon-halility" class="bi bi-code-slash code menu-icon"></i>-->
+                    <Span class="title-company" translate="no">Mis Habilidades</Span>
                     <!--<Span class="description-job">Customizacion de e-comerce (HCL)</Span>-->
                 </div>
 
-                <hr class="separador-info">
+                <!--<hr class="separador-info">-->
                 <div class="content-datos-descrip">
                     <div class="datos">
 
                         <span class="desc-content-name">                           
-                            <Span class="desc-detail">Metodología Scrum</Span>
+                            <span id="i-java"> </span>
+                        <Span class="desc-detail">Java</Span>
                         </span>
-
                         <span class="desc-content">    
                             <div class ="base-porcentaje">
                                 <Span class="barra-one"></Span>
                     </div>
                     </span>
-
-                    <span class="desc-content-name">                           
-                            <Span class="desc-detail">Metodología Scrum</Span>
+                </div>
+                <div class="datos">
+                    <span class="desc-content-name">    
+                        <span id="i-html"> </span>
+                    <Span class="desc-detail">HTML</Span>
                     </span>
-
                     <span class="desc-content">    
-                            <div class ="base-porcentaje">
-                                <Span class="barra-one"></Span>
+                        <div class ="base-porcentaje">
+                            <Span class="barra-one"></Span>
                 </div>
                 </span>
-
+            </div>
+            <div class="datos">
                 <span class="desc-content-name">                           
-                            <Span class="desc-detail">Metodología Scrum</Span>
+                    <Span class="desc-detail">Java</Span>
                 </span>
-
                 <span class="desc-content">    
-                            <div class ="base-porcentaje">
-                                <Span class="barra-one"></Span>
+                    <div class ="base-porcentaje">
+                        <Span class="barra-one"></Span>
             </div>
             </span>
-
         </div>
+
+        <div class="datos">
+            <span class="desc-content-name">                           
+                <Span class="desc-detail">Java</Span>
+            </span>
+            <span class="desc-content">    
+                <div class ="base-porcentaje">
+                    <Span class="barra-one"></Span>
+        </div>
+        </span>
+    </div>
+
+
+
+
+
+
     </div>
     </div>
     </div>
