--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -1,6 +1,7 @@
     body {
-        font-family: 'Cooda', sans-serif;
-        background-color: #ffd0bb00;
+        /*  font-family: 'Cooda', sans-serif;*/
+        font-family: 'Poppins', sans-serif;
+        background-color: #1a1a1a;
         background: url(/assets/background-image.png) no-repeat center center fixed;
         background-size: cover;
     }
@@ -14,7 +15,6 @@
     
     @media screen and (max-width:1920px) {
         .center {
-            /* background: url(/assets/background-image.png) no-repeat center center fixed; */
             background-size: cover;
             display: flex;
             align-items: center;
@@ -22,19 +22,66 @@
             padding: 120px 10px;
             margin: 0px;
             size: auto auto;
-            background: #f1f1f1;
+            background: #1a1a1a;
+        }
+        #content-main {
+            display: flex;
+            width: 1200px;
+            height: 600px;
+            justify-content: center;
+            background-color: #161616;
+            box-shadow: 2px -1px 19px 8px rgb(0 0 0 / 64%);
+            padding: 50px;
+        }
+        #datos {
+            width: auto;
+            height: auto;
+            color: #ffffff;
+            padding: 20px;
+        }
+        #datos span {
+            padding: 2px;
+            display: block;
+        }
+        .spiner {
+            color: #ffffff;
+        }
+        #charge {
+            color: #2796f5
+        }
+        #datos span i {
+            color: #ffffff;
+            margin: 15px;
+        }
+        #avatar {
+            display: flex;
+            width: 380px;
+            height: 380px;
+        }
+        #img-avatar {
+            width: 100%;
+            height: 100%;
+            margin: auto;
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+            z-index: 2;
+            outline: none;
+            padding: 10px;
+        }
+        #content-avatar {
+            width: 400px;
+            height: 600px;
         }
         .div-contact {
-            width: 700px;
-            height: 600px;
-            background-color: rgb(255, 255, 255);
-            padding: 85px 150px 85px 150px;
+            width: 400px;
+            height: px;
+            background-color: #3E3E3E;
+            padding: 25px 30px 25px 30px;
             justify-content: center;
             align-items: center;
-            box-shadow: 0px 10px 10px rgba(63, 146, 241, 0.13);
+            box-shadow: 1px 1px 10px 6px rgb(6 6 6 / 72%);
             text-align: center;
             color: rgb(54, 54, 54);
-            /*  margin: 100px;*/
         }
         input {
             width: 100%;
@@ -55,10 +102,20 @@
         }
         input:focus {
             /* outline: none;*/
-            border-color: rgb(83, 123, 211);
-            box-shadow: 0px 0px 7px 3px rgb(80 162 255 / 32%);
+            border-color: solid 1px #1685e3c2;
+            box-shadow: 0px 0px 6px 3px rgb(71 174 255 / 82%);
             /*margin: 30px auto 30px auto;*/
             /* border: 1px solid rgba(34, 120, 201, 0.582);*/
+        }
+        #social {
+            display: block;
+            padding: 20px;
+            display: flex;
+            justify-content: center;
+        }
+        #social i {
+            color: rgb(255, 255, 255);
+            padding: 10px;
         }
         button {
             width: 100%;
@@ -68,9 +125,10 @@
             border-radius: 5px;
             border: none;
             color: white;
-            background-color: rgb(251 132 27);
+            background-color: #D7453F;
             font-size: 16px;
             cursor: pointer;
+            outline: none;
         }
         .mensaje {
             width: 100%;
@@ -144,7 +202,7 @@
         }
         #spiner {
             display: block;
-            color: #77aad7;
+            color: #ffffff;
         }
     }
     
