--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -5,33 +5,52 @@
 
 <div ng-show="IsVisible" class="center">
     <form #f=ngForm (ngSubmit)="sendEmail()" novalidate>
-        <div class="div-contact">
-            <h2>Escríbeme un mensaje</h2>
-            <div class="form-group">
-                <input type="text" style="text-transform:uppercase;" id="name" name="name" placeholder=" Nombres" required [(ngModel)]="name">
-            </div>
-            <div class="form-group ">
-                <input type="tel " translate="yes" placeholder="CELULAR " name="phonenumber" required [(ngModel)]="phonenumber ">
-            </div>
-            <div class="form-group ">
-                <input type="email " placeholder="E-MAIL " required name="emailCustomer" [(ngModel)]="emailCustomer">
-            </div>
-            <div class="form-group ">
-                <input type="email" translate="yes" placeholder="ASUNTO " required name="subject" [(ngModel)]="subject">
-            </div>
-            <div class=" form-group ">
-                <!--<input class="mensaje" name="contentMessage" [(ngModel)]="contentMessage">-->
-                <textarea class="mensaje" cols="20" rows="3" name="contentMessage" maxlength="90" required [(ngModel)]="contentMessage" placeholder="MENSAJE"> </textarea>
+        <div id="content-main">
+
+            <div id="content-avatar">
+                <div id="avatar">
+                    <img src="/assets/MiAvatar.png" id="img-avatar">
+                </div>
+                <div id="datos">
+                    <span><i class="bi bi-envelope-fill"></i>francismendozach@hotmail.com</span>
+                    <span><i class="bi bi-phone-fill"></i>(+51)943445789</span>
+                </div>
+                <div id="social">
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <a href=""> <i class="bi bi-facebook"></i></a>
+                </div>
+
 
             </div>
-            <button id="btn-enviar " [disabled]="!f.valid "> Enviar <i class="bi bi-send-plus-fill"></i></button>
-            <div id="charge" hidden="hide">
-                <span id="spiner " class="spinner-border"> </span>
-                <p translate="yes">Enviando</p>
+            <div class="div-contact">
+                <!--<h2>Escríbeme un mensaje</h2>-->
+                <div class="form-group">
+                    <input type="text" style="text-transform:uppercase;" id="name" name="name" placeholder=" Nombres" required [(ngModel)]="name">
+                </div>
+                <div class="form-group ">
+                    <input type="tel " translate="yes" placeholder="CELULAR " name="phonenumber" required [(ngModel)]="phonenumber ">
+                </div>
+                <div class="form-group ">
+                    <input type="email " placeholder="E-MAIL " required name="emailCustomer" [(ngModel)]="emailCustomer">
+                </div>
+                <div class="form-group ">
+                    <input type="email" translate="yes" placeholder="ASUNTO " required name="subject" [(ngModel)]="subject">
+                </div>
+                <div class=" form-group ">
+                    <!--<input class="mensaje" name="contentMessage" [(ngModel)]="contentMessage">-->
+                    <textarea class="mensaje" cols="20" rows="3" name="contentMessage" maxlength="190" required [(ngModel)]="contentMessage" placeholder="MENSAJE"> </textarea>
+
+                </div>
+                <button id="btn-enviar " [disabled]="!f.valid "> Enviar </button>
+                <div id="charge" hidden="hide">
+                    <span class="spinner-border spiner"> </span>
+                    <p translate="yes">Enviando</p>
+                </div>
+
+                <!--<button id="btn-enviar " mat-raised-button type="submit " id="btn " (click)="sendEmail() ">Enviar</button>-->
+                <!--<button mat-raised-button [disabled]="true " type="submit " id="btn " (click)="sendEmail() ">Enviar</button>-->
             </div>
 
-            <!--<button id="btn-enviar " mat-raised-button type="submit " id="btn " (click)="sendEmail() ">Enviar</button>-->
-            <!--<button mat-raised-button [disabled]="true " type="submit " id="btn " (click)="sendEmail() ">Enviar</button>-->
         </div>
     </form>
 
