--- a/src/app/components/habilidades/habilidades.component.css
+++ b/src/app/components/habilidades/habilidades.component.css
@@ -41,22 +41,28 @@
                     height: 400px;
                 }
                 .habilidades {
-                    width: 75%;
-                    height: 700px;
-                    /* background: #FFFFFF;
-                    box-shadow: 0px 10px 10px rgba(56, 56, 56, 0.116);*/
+                    width: 100%;
+                    height: auto;
                     border-radius: 10px;
                     margin: 10% auto auto auto;
                     justify-content: center;
+                    background: #222222;
                 }
                 .datos {
                     display: block;
-                    margin: 50px 50px 50px 50px;
+                    margin: 30px 30px 30px 30px;
+                    background: #161616;
+                    padding: 10px 30px 10px 30px;
+                    border-radius: 2px;
+                }
+                .datos:hover {
+                    margin: 35px 35px 35px 35px;
                 }
                 .content-datos-descrip {
                     margin: 0;
                     padding: 0;
                     transform-origin: center;
+                    display: flex;
                 }
                 .descrip span {
                     padding: 10px 20px 10px 40px;
@@ -72,19 +78,17 @@
                     display: block;
                     padding: 50px;
                 }
-                /* .info span {
-                    color: rgb(77, 77, 77);
-                    margin: 0 0 0 0;
-                }*/
                 .info-head {
                     width: 100%;
                     height: 30px;
+                    text-align: center;
                 }
                 .title-company {
                     display: inline;
                     font-size: 35px;
-                    color: rgb(25, 143, 221) !important;
-                    font-weight: 900;
+                    color: rgb(255, 255, 255) !important;
+                    font-weight: 100;
+                    letter-spacing: 1px;
                 }
                 .separador-info {
                     color: rgb(255 255 255);
@@ -287,10 +291,10 @@
                     display: inline-block;
                     color: rgb(255 255 255);
                     font-size: 18px;
-                    background: #2860cd;
+                    /* background: #2860cd; */
                     padding: 5px;
                     border-radius: 3px;
-                    margin: 15px 0px -5px 0px;
+                    /* margin: 15px 0px -5px 0px; */
                 }
                 #check {
                     font-size: 30px;
@@ -308,30 +312,47 @@
                 }
                 .barra-one {
                     background-color: rgb(40 96 205);
-                    width: 400px;
-                    height: 15px;
+                    width: 94px;
+                    height: 8px;
                     border-radius: 0px 0px 0px 0px;
                     margin: 0px 0px 10px 0px !important;
                     animation-name: increment;
                     animation-duration: 5s;
                     animation-direction: alternate;
                     animation-delay: 0s;
-                    box-shadow: 1px 0px 10px 4px rgb(177 158 136 / 12%);
                 }
                 .base-porcentaje {
                     background-color: rgb(204, 226, 247);
-                    width: 500px;
-                    height: 15px;
+                    width: 208px;
+                    height: 8px;
                     border-radius: 10px;
                     margin: 2px 0px 10px 0px !important;
+                }
+                #i-java {
+                    width: 10px;
+                    height: 10px;
+                    background: url(/assets/icon/java.png);
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    padding: 10px;
+                    display: inline-block;
+                }
+                #i-html {
+                    width: 10px;
+                    height: 10px;
+                    background: url(/assets/icon/html.png);
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    padding: 10px;
+                    display: inline-block;
                 }
                 /* transform: rotate(0deg);*/
                 @keyframes increment {
                     0% {
-                        width: 100px;
+                        width: 0px;
                     }
                     100% {
-                        width: 400px;
+                        width: 94px;
                     }
                 }
                 #icon-halility {
