--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -7,15 +7,16 @@ a:visited {
 @media screen and (max-width:1920px) {
     header {
         width: 100%;
-        /*height: 120%;*/
         position: fixed;
-        /* box-shadow: 0px 10px 10px rgba(92, 92, 92, 0.034);*/
         z-index: 3;
+        font-family: 'Poppins', sans-serif;
+        font-size: 14px;
+        font-weight: 300;
     }
     nav {
         box-shadow: 0px 10px 10px rgba(92, 92, 92, 0.034);
         /*background-color: #0f2c5a;*/
-        background-color: #173B7B;
+        background-color: #222222;
     }
     nav ul {
         list-style: none;
@@ -35,7 +36,8 @@ a:visited {
     }
     nav ul li:hover {
         /* background-color: #446f9c;*/
-        background-color: #044f9e;
+        background-color: #2297EC
+        /* border-bottom: solid 1px #ffffff;*/
         /* font-size: 16.5px;*/
         /*  border-right: 30px;*/
     }
