--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,11 +2,11 @@
 <header>
     <nav>
         <ul>
-            <li (click)="navHome()"> <i class="bi bi-house menu-icon"></i>Inicio </li>
+            <li (click)="navHome()"> <i class="bi bi-house-door-fill menu-icon"></i>Inicio </li>
             <li (click)="navHabilidades()"> <i class="bi bi-code-slash code menu-icon"></i>Habilidades</li>
             <li (click)="navExperiencia()"> <i class="bi bi-person-workspace menu-icon"></i>Experiencia </li>
             <li (click)="navHobies()"> <i class="bi bi-person-workspace menu-icon"></i>Hobies</li>
-            <li (click)="navContacto()"> <i class="bi bi-envelope menu-icon"></i>Contacto</li>
+            <li (click)="navContacto()"> <i class="bi bi-envelope-fill menu-icon"></i>Contacto</li>
         </ul>
         <div class="menu" (click)='showMenu()'>
             <i class="bi bi-list"></i>
