--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ body {
     -moz-background-size: cover;
     -webkit-background-size: cover;
     -o-background-size: cover;*/
-    background: rgb(12, 39, 68);
+    background: #1a1a1a;
     min-height: 100vh;
     margin: 0px;
 }
