--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -88,7 +88,7 @@
         left: 1px;
         /*top: 707px;*/
         /*  background: rgb(12 41 72 / 63%);*/
-        background-color: #173b7ba6;
+        background-color: #52596600 !important;
         bottom: 0px;
     }
     .social {
