--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -10,7 +10,7 @@ a:visited {
         position: fixed;
         z-index: 3;
         font-family: 'Poppins', sans-serif;
-        font-size: 14px;
+        font-size: 12px;
         font-weight: 300;
     }
     nav {
@@ -48,7 +48,7 @@ a:visited {
     .menu-icon {
         color: rgb(255, 255, 255);
         padding: 10px;
-        font-size: 24px;
+        font-size: 20px;
     }
     .menu i {
         font-size: 15px;
@@ -172,4 +172,35 @@ a:visited {
     nav ul {
         display: none;
     }
+
+    nav {
+      /*  background-color: #161616 !important;*/
+        box-shadow: none;
+        display: table-caption;
+        padding: 10px 10px 10px 10px;
+      /*  box-shadow: 0px 10px 10px rgb(24 24 24 / 86%);*/
+    }
+
+    nav  ul  li{
+        padding: 4px;
+        font-size: 12px;
+        letter-spacing: 0.5px;
+        border-bottom: solid 1px #474747;
+        display: grid;
+        text-align: center;
+    }
+
+    .changeBackColor{
+        background-color: #ffffff00 !important;
+        box-shadow: none;
+    }
+
+
+    .changeBackSolidColor{
+        background-color: #161616 !important;
+      box-shadow: 0px 10px 10px rgb(24 24 24 / 86%);
+        
+    }
+
+    
 }
