mejoras de interface coontacto -mobile

--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -2,7 +2,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
-
+<body>
 <div ng-show="IsVisible" class="center">
     <form #f=ngForm (ngSubmit)="sendEmail()" novalidate>
         <div id="content-main">
@@ -55,6 +55,9 @@
     </form>
 
 </div>
+
+    
+</body>
 <!-- <div class="modal">-->
 <div class="modal-mesaje" hidden>
     <div class=" modal-content">
