--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -248,17 +248,19 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            size: auto auto;
+            width: 100%;
+            height: 100%;
+            padding: 100px 0px;
         }
         .div-contact {
             width: 300px;
             height: 500px;
-            background-color: rgb(255, 255, 255);
+            background-color: #3E3E3E;
             border-radius: 10px;
             padding: 40px;
             justify-content: center;
             align-items: center;
-            box-shadow: 0px 10px 10px rgba(56, 56, 56, 0.116);
+            box-shadow: 0px 10px 10px rgba(56, 56, 56, 0.116) !important;
             font-size: 12px;
         }
         input {
@@ -271,7 +273,7 @@
             outline: 0;
             background: #f9f9f9;
             /* border-bottom: 2px solid rgb(151 151 151); */
-            color: white;
+            color: rgb(36, 36, 36);
         }
         input:focus {
             outline: none;
@@ -280,7 +282,7 @@
             margin: 30px auto 30px auto;
         }
         input::placeholder {
-            color: rgb(255, 255, 255) !important;
+            color: rgb(37, 37, 37) !important;
             font-size: 12px;
         }
         button {
@@ -302,10 +304,33 @@
             border-radius: 5px;
             border: none;
             outline: 0;
-            background: transparent;
-            border: 1px solid rgb(163, 163, 163);
+            background: white;
+            /* border: 1px solid rgb(163, 163, 163); */
         }
         h2 {
             font-size: 20px !important;
+        }
+        #content-main {
+            display: flex;
+            width: 350px;
+            height: 600px !important;
+            justify-content: center;
+            background-color: #161616e0;
+            box-shadow: 2px -1px 19px 8px rgb(0 0 0 / 64%);
+            padding: 20px;
+            margin: auto;
+            height: max-content;
+            align-items: center;
+        }
+        #avatar{
+            display: none;
+        }
+
+        #content-avatar{
+            display: none;
+        }
+        form{
+            width: 100%;
+            height: 100%;
         }
     }
