--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -97,6 +97,7 @@
         margin: auto;
         align-items: center;
         justify-content: center;
+        font-size: 10px
     }
     .social a {
         text-decoration: none;
