--- a/src/app/components/habilidades/habilidades.component.css
+++ b/src/app/components/habilidades/habilidades.component.css
@@ -40,16 +40,16 @@
                     display: block;
                     height: 400px;
                 }
-                .habilidades {
-                    width: 100%;
+                .habilidades{
+                    width: 95%;
                     height: auto;
                     border-radius: 10px;
                     margin: 10% auto auto auto;
                     justify-content: center;
-                    background: #222222;
+                    background: #222222f0;
                 }
                 .datos {
-                    display: block;
+                    display: inline-block;
                     margin: 30px 30px 30px 30px;
                     background: #161616;
                     padding: 10px 30px 10px 30px;
@@ -62,7 +62,7 @@
                     margin: 0;
                     padding: 0;
                     transform-origin: center;
-                    display: flex;
+                    display: block;
                 }
                 .descrip span {
                     padding: 10px 20px 10px 40px;
@@ -365,7 +365,7 @@
             
             @media screen and (max-width:1280px) {
                 .habilidades {
-                    width: 70%;
+                    width: 95%;
                     height: 16.5%;
                     /*  box-shadow: 0px 10px 10px rgba(56, 56, 56, 0.151);*/
                     border-radius: 10px;
@@ -448,7 +448,7 @@
                 .content-datos-descrip {
                     margin: 0;
                     padding: 0;
-                    display: flex;
+                    display: block;
                     justify-content: center;
                 }
             }
