--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -54,7 +54,7 @@ body {
     .loading {
         color: #f8f8f8;
         font-weight: 400;
-        font-size: 22px;
+        font-size: 18px;
         display: block;
         text-align: center;
         margin: 10px;
@@ -306,8 +306,8 @@ body {
     }
     #content-avatar-chargue {
         display: block;
-        width: 300px;
-        height: 300px;
+        width: 200px;
+        height: 200px;
         margin: auto;
         border-radius: 500px;
         background: #d7d7d7;
@@ -1047,7 +1047,7 @@ body {
         background-color: #2c2c2c;
         width: 270px;
         height: 50px;
-        margin: 15px;
+        margin: 5px;
         align-items: center;
         justify-content: center;
         box-shadow: -3px 5px 10px rgb(6 6 6 / 18%);
@@ -1110,7 +1110,7 @@ body {
         margin: auto;
         padding: 10px !important;
         justify-content: center;
-        display: block;
+        display: grid;
     }
     .social a {
         text-decoration: none;
@@ -1145,8 +1145,8 @@ body {
         text-align: center;
     }
     .btn-whatsapp {
-        right: 47px;
-        bottom: 129px;
+        right: 8px;
+        bottom: 30px;
         width: 65px;
         height: 65px;
         border-radius: 300px;
@@ -1243,6 +1243,19 @@ body {
             transform: scale(1);
             background-color: rgb(255, 131, 29);
         }
+    }
+
+    #detail-sobremi-content{
+        width: 330px;
+        height: 600px;
+        background-color: #161616;
+        z-index: 12;
+        margin: auto;
+        box-shadow: -1px 1px 11px 5px rgb(16 16 16 / 73%);
+    }
+
+    #sobre-mi-avatar{
+       display:none ;
     }
 
    .conten-btn-sobre{
