--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -5,8 +5,9 @@ a:visited {
 }
 
 @media screen and (max-width:1920px) {
-
-  
+    ul[style] {
+        display: block;
+    }
     header {
         width: 100%;
         position: fixed;
@@ -18,11 +19,12 @@ a:visited {
     nav {
         box-shadow: 0px 10px 10px rgba(92, 92, 92, 0.034);
         /*background-color: #0f2c5a;*/
-        background-color: #222222;
+        background-color: #222222 !important;
     }
     nav ul {
         list-style: none;
         /*background-color: #1e4f83;*/
+        display: block;
         text-align: center;
     }
     nav ul:hover {
@@ -85,7 +87,7 @@ a:visited {
         padding: 0px;
     }
     nav {
-        background-color: #0f2c5a;
+        /*background-color: #0f2c5a;*/
         box-shadow: 0px 10px 10px rgb(56 56 56 / 15%);
     }
     nav ul li {
@@ -174,16 +176,14 @@ a:visited {
     nav ul {
         display: none;
     }
-
     nav {
-      /*  background-color: #161616 !important;*/
+        /*  background-color: #161616 !important;*/
         box-shadow: none;
         display: table-caption;
         padding: 10px 10px 10px 10px;
-      /*  box-shadow: 0px 10px 10px rgb(24 24 24 / 86%);*/
+        /*  box-shadow: 0px 10px 10px rgb(24 24 24 / 86%);*/
     }
-
-    nav  ul  li{
+    nav ul li {
         padding: 4px;
         font-size: 12px;
         letter-spacing: 0.5px;
@@ -191,20 +191,12 @@ a:visited {
         display: grid;
         text-align: center;
     }
-
-    .changeBackColor{
+    .changeBackColor {
         background-color: #ffffff00 !important;
         box-shadow: none;
     }
-
-
-    .changeBackSolidColor{
+    .changeBackSolidColor {
         background-color: #161616 !important;
         box-shadow: 0px 10px 10px rgb(24 24 24 / 86%);
-        
     }
-
-   
-
-    
 }
