--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -299,7 +299,7 @@ body {
         /* transition: all ease-in-out 300ms; */
         z-index: 1;
         /*animation-name: girar-one;*/
-       /* animation-duration: 7s;*/
+        /* animation-duration: 7s;*/
         /*animation-iteration-count: infinite;*/
         /*animation-direction: alternate;*/
         /*animation-delay: 10s;*/
@@ -560,7 +560,7 @@ body {
         padding: 80px 5px 0px 5px;
     }
     .habilidades {
-       /* background-image: url(/assets/hero-glow.svg);*/
+        /* background-image: url(/assets/hero-glow.svg);*/
         background-repeat: no-repeat;
         width: 75%;
         height: 630px;
@@ -586,14 +586,14 @@ body {
         width: 200px !important;
         height: 200px;
         border-radius: 300px;
-       /* box-shadow: 0px 10px 10px rgba(79, 89, 236, 0.178);*/
+        /* box-shadow: 0px 10px 10px rgba(79, 89, 236, 0.178);*/
         margin: auto;
         /* transition: all ease-in-out 300ms;*/
         z-index: 1;
         /*animation-name: girar;*/
-      /*  animation-duration: 7s;*/
+        /*  animation-duration: 7s;*/
         /*animation-iteration-count: infinite;*/
-       /* animation-direction: alternate;*/
+        /* animation-direction: alternate;*/
         /*animation-delay: 10s;*/
     }
     @keyframes girar {
@@ -832,7 +832,7 @@ body {
         padding: 30px 0px 0px 0px;
     }
     .habilidades {
-       /* background-image: url(/assets/hero-glow.svg);*/
+        /* background-image: url(/assets/hero-glow.svg);*/
         background-repeat: no-repeat;
         background-color: #13274c;
         background-size: auto;
@@ -1041,7 +1041,6 @@ body {
         /* margin: auto; */
         z-index: 1;
     }
-
     .blok-content {
         display: flex;
         background-color: #2c2c2c;
@@ -1053,7 +1052,7 @@ body {
         box-shadow: -3px 5px 10px rgb(6 6 6 / 18%);
         border-radius: 3px;
     }
-    .foto{
+    .foto {
         width: 200px;
         height: 200px;
         margin: auto;
@@ -1151,8 +1150,9 @@ body {
         height: 65px;
         border-radius: 300px;
         background-color: rgb(237 118 61);
+        position: fixed;
+        z-index: 8;
     }
-
     #content-avatar-chargue {
         display: block;
         width: 130px;
@@ -1161,7 +1161,7 @@ body {
         border-radius: 500px;
         background: #d7d7d7;
     }
-    .loading{
+    .loading {
         color: #f8f8f8;
         font-weight: 400;
         font-size: 14px;
@@ -1169,7 +1169,6 @@ body {
         text-align: center;
         margin: 10px;
     }
-
     .cuadrado {
         display: flex;
         margin: auto;
@@ -1244,8 +1243,7 @@ body {
             background-color: rgb(255, 131, 29);
         }
     }
-
-    #detail-sobremi-content{
+    #detail-sobremi-content {
         width: 330px;
         height: 600px;
         background-color: #161616;
@@ -1253,14 +1251,12 @@ body {
         margin: auto;
         box-shadow: -1px 1px 11px 5px rgb(16 16 16 / 73%);
     }
-
-    #sobre-mi-avatar{
-       display:none ;
+    #sobre-mi-avatar {
+        display: none;
     }
-
-   .conten-btn-sobre{
-       font-size: 10px;
-   }
+    .conten-btn-sobre {
+        font-size: 10px;
+    }
 }
 
 @media screen and (max-width: 280px) {
@@ -1316,10 +1312,10 @@ body {
         margin: auto;
         z-index: 1;
         /*animation-name: girar;*/
-      /*  animation-duration: 7s;*/
+        /*  animation-duration: 7s;*/
         /*animation-iteration-count: infinite;*/
         /*animation-direction: alternate;*/
-       /* animation-delay: 10s;*/
+        /* animation-delay: 10s;*/
     }
     .foto {
         width: 100%;
