--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -14,7 +14,7 @@
     /*@import url('https://fonts.googleapis.com/css2?family=Archivo&family=Bebas+Neue&family=Heebo&display=swap');*/
     
     @media screen and (max-width:1920px) {
-        .center{
+        .center {
             background-size: cover;
             display: flex;
             align-items: center;
@@ -46,7 +46,6 @@
             display: block;
             font-size: 12px;
         }
-    
         .spiner {
             color: #ffffff;
         }
@@ -293,7 +292,7 @@
             border-radius: 5px;
             border: none;
             color: white;
-            background-color: rgb(124 185 239);
+            background-color: #D7453F;
             font-size: 14px;
         }
         .mensaje {
@@ -322,14 +321,13 @@
             height: max-content;
             align-items: center;
         }
-        #avatar{
+        #avatar {
             display: none;
         }
-
-        #content-avatar{
+        #content-avatar {
             display: none;
         }
-        form{
+        form {
             width: 100%;
             height: 100%;
         }
