--- a/src/app/components/experiencia/experiencia.component.css
+++ b/src/app/components/experiencia/experiencia.component.css
@@ -42,7 +42,7 @@
                     padding-top: 30%;
                     z-index: 2;
                 }
-                .content-foto-info{
+                .content-foto-info {
                     margin: 30px;
                     display: block;
                     height: 300px;
@@ -76,14 +76,14 @@
                     display: block;
                     font-weight: 100;
                 }
-                .info{
+                .info {
                     width: auto;
                     height: 300px;
                     margin: auto auto auto auto;
                     display: block;
                     padding: 30px;
                 }
-                .info  span {
+                .info span {
                     color: rgb(255 255 255) !important;
                     margin: 0 0 0 0;
                 }
@@ -97,7 +97,6 @@
                     color: rgb(25, 143, 221) !important;
                     font-weight: 900;
                 }
-               
                 #img {
                     background: url(/assets/fran.jpg);
                     background-size: 100% 100%;
@@ -586,12 +585,18 @@
                     display: block;
                     padding: 0px;
                 }
+                #padre {
+                    width: 100%;
+                    height: 100%;
+                    margin: 10px;
+                    display: grid;
+                }
                 .habilidades {
                     width: 93%;
-                    height: 100%;
+                    height: 300px;
                     box-shadow: 0px 10px 10px rgba(56, 56, 56, 0.151);
                     border-radius: 10px;
-                    margin: 15% auto -40px auto;
+                    margin: 5% auto 0px auto;
                     padding: 10px 0px 10px 0px;
                     justify-content: center;
                 }
@@ -684,7 +689,6 @@
                     width: auto;
                     text-align: left;
                 }
-             
                 #check {
                     font-size: 20px;
                     color: tomato;
