--- a/src/app/components/habilidades/habilidades.component.css
+++ b/src/app/components/habilidades/habilidades.component.css
@@ -40,7 +40,7 @@
                     display: block;
                     height: 400px;
                 }
-                .habilidades{
+                .habilidades {
                     width: 95%;
                     height: auto;
                     border-radius: 10px;
@@ -679,17 +679,15 @@
                     width: 100%;
                     height: 80px;
                     text-align: center;
-                    display: block;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                 }
                 .title-company {
-                    display: block;
-                    font-size: 23px;
+                    font-size: 22px;
                     text-align: center;
-                    color: rgb(7, 154, 199) !important;
-                    margin: 15px 0 0 0!important;
-                    font-weight: 800;
-                    width: auto;
-                    /* justify-content: center; */
+                    color: rgb(255 255 255) !important;
+                    font-weight: 400;
                 }
                 .descrip span {
                     padding: 15px 20px 15px 0px;
@@ -706,7 +704,7 @@
                 .content-datos-descrip {
                     margin: 0;
                     padding: 0;
-                    display: flex;
+                    display: grid;
                     justify-content: center;
                 }
                 .description-job {
@@ -716,6 +714,7 @@
                 .datos {
                     display: block;
                     width: auto;
+                    margin: 5px;
                 }
                 .div-carga {
                     position: fixed;
